@@ -1,11 +1,0 @@
-#ifndef _GEOS_VERSION_H
-#define _GEOS_VERSION_H
-
-#define GEOS_VERSION_MAJOR 3
-#define GEOS_VERSION_MINOR 0
-#define GEOS_VERSION_PATCH 0rc1
-#define GEOS_VERSION "3.0.0rc1"
-#define GEOS_JTS_PORT "1.7.1"
-
-
-#endif // _GEOS_VERSION_H
